--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-        
+    <title>Favicon</title> 
+    <link rel="icon" type"image/x-icon" href="img/favicon.ico">
     </head>
-    <body>
-        
-    </body>
+    <body>...</body>
 </html>
