--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <title>Favicon</title> 
-    <link rel="icon" type"image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type"image/x-icon" href="https://www.w3schools.com/html/html_favicon.asp">
     </head>
     <body>...</body>
 </html>
